--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Aqui você pode proteger os seus links... Ou compartilha-los :D">
     <title>Central de Links</title>
   </head>
   <body>
